[package]
name = "smart-lock"
version = "0.1.0"
edition = "2021"
rust-version = "1.78"
license = "MIT OR Apache-2.0"
description = "Per-field async RwLock with compile-time access control via proc macro"
repository = "https://github.com/mgild/smart-lock"
homepage = "https://github.com/mgild/smart-lock"
documentation = "https://docs.rs/smart-lock"
readme = "../README.md"
keywords = ["async", "lock", "rwlock", "concurrency", "proc-macro"]
categories = ["concurrency", "asynchronous"]

[features]
default = []

[dependencies]
smart-lock-derive = { version = "0.1.0", path = "../smart-lock-derive" }
async-lock = "3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
pollster = "0.4"
criterion = { version = "0.8", features = ["async_tokio"] }
trybuild = "1"

[[bench]]
name = "contention"
harness = false
